tests/sumo/output/e1/errors/detectPersons_invalid/errors.sumo
Error: Invalid person mode 'dummy' in E1 detector definition '4/1to3/1'
Quitting (on error).
